<resources>
    <string name="app_name">橙汁学习通</string>
    <string name="input_phone">手机号</string>
    <string name="input_password">密码</string>
    <string name="login">登录</string>
    <string name="forget">忘记密码</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">姓名</string>
    <string name="nav_header_subtitle">学校</string>
    <string name="nav_header_number">学号</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_to">开启签到服务</string>
    <string name="action_sign_back">关闭签到服务</string>
    <string name="action_back_login">退出登录</string>
    <string name="action_back">退出</string>

    <string name="menu_home">课程</string>
    <string name="menu_gallery">日志</string>
    <string name="menu_slideshow">考试</string>

    <string name="menu_course">课程</string>
    <string name="menu_sign">签到</string>
    <string name="menu_log">日志</string>
    <string name="menu_exam">考试</string>
    <string name="menu_task">作业</string>
    <string name="menu_setting">设置</string>
</resources>