<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sign"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_sign" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_baseline_colorize_24"
            android:title="@string/menu_task" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/ic_baseline_wysiwyg_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_setting" />
    </group>
</menu>