<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_course">

    <fragment
        android:id="@+id/nav_course"
        android:name="com.cjl.cjlchaoxing.ui.CourseFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_course" />

    <fragment
        android:id="@+id/nav_sign"
        android:name="com.cjl.cjlchaoxing.ui.SignFragment"
        android:label="@string/menu_sign"
        tools:layout="@layout/fragment_sgin"/>

    <fragment
        android:id="@+id/nav_task"
        android:name="com.cjl.cjlchaoxing.ui.TaskFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/nav_exam"
        android:name="com.cjl.cjlchaoxing.ui.ExamFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_exam" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.cjl.cjlchaoxing.ui.SetFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting"/>

</navigation>