<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="35sp"
            android:layout_marginTop="100dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/edit_phone"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone"/>
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"/>

        <Button
            android:id="@+id/login"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:layout_gravity="end"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>